2007-03-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/games.R (barabasi.game) : bug corrected,
	call nonlinear game is zero.appeal is not 1

	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_ditedcat) :
	bug corrected, sd was never calculated

2007-03-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/measure.dynamics.R 
	(measure.dynamics.citingcat.citedcat) : added
	* interfaces/R/src/rinterface.c
	(R_igraph_measure_dynamics_citingcat_citedcat)
	(R_igraph_measure_dynamics_citingcat_citedcat_st) : added

2007-03-14  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/games.R (citing.cited.type.game) : added
	* interfaces/R/src/rinterface.c (R_igraph_citing_cited_type_game)
	: added

	* interfaces/R/igraph/R/games.R (cited.type.game) : added
	* interfaces/R/src/rinterface.c (R_igraph_cited_type_game) : added

	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.citedcat) :
	added
	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_citedcat)
	(R_igraph_measure_dynamics_citedcat_st) : added

2007-03-12  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.id)
	(measure.dynamics.idage, measure.dynamics.lastcit) : (re)added 'number'
	argument
	(measure.dynamics.lastcit) : added 'norm.method' argument

	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_id)
	(R_igraph_measure_dynamics_idage, R_igraph_measure_dynamics_lastcit) :
	updated

	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.age) :
	added
	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_age)
	(R_igraph_measure_dynamics_age_st) : added
	
2007-03-11  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.id) :
	'start.vertex', 'significance', 'estind', 'estage', 'number'
	arguments removed, 'norm.method' added
	(measure.dynamics.idage) : 'start.vertex', 'significance',